syntax = "proto3";

package player;

service PlayersService {
  rpc FindOne (PlayerById) returns (Player) {}
}

message PlayerById {
  int32 id = 1;
}

message Player {
  int32 id = 1;
  string name = 2;
}